Movies loading into popular fragment recycler view fixed.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="popular">Popular</string>
     <string name="top_rated">Top Rated</string>
     <string name="upcoming">Upcoming</string>
-</resources>
+    <string name="thumbnail">Thumbnail</string>
+    </resources>
