--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="we_have_problem">We\'ve got problem.</string>
     <string name="we_cannot_download_data">We can not download movies data.</string>
     <string name="try_again">Check your Internet connection and try again.</string>
+    <string name="calendar_icon">Calendar icon</string>
 </resources>
