--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="we_cannot_download_data">We can not download testMovies data.</string>
     <string name="try_again">Check your Internet connection and try again.</string>
     <string name="calendar_icon">Calendar icon</string>
+    <string name="now_playing">Now Playing</string>
 </resources>
