--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="now_playing">Now Playing</string>
     <string name="search">Search</string>
     <string name="title_activity_search">SearchActivity</string>
-    <string name="search_hint">Type to search...</string>
+    <string name="search_hint">Type to search for movies…</string>
 </resources>
